CHANGES TO MARGIN

--- a/index.html
+++ b/index.html
@@ -53,10 +53,6 @@
       </div>
     </section>
 
-    <section>
-      <picture>
-        <source media="(min-width: 1440px)" srcset="./" />
-      </picture>
-    </section>
+    <section></section>
   </body>
 </html>
