--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
       </div>
     </section>
 
-    <section></section>
+    <section class="snippet-container">
+      <div class="snippet-flex-container">
+        <div class="img-container">
+          <img class="image" src="./images/image-computer.png" alt="" />
+        </div>
+        <div class="snippet-text-container">
+          <div class="snippet-text-body">
+            <p class="snippet-text-heading">Quick Search</p>
+            <p class="snippet-text-content">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <div class="snippet-text-body">
+            <p class="snippet-text-heading">iCloud Sync</p>
+            <p class="snippet-text-content">
+              Instantly saves and syncs snippets across all your devices.
+            </p>
+          </div>
+          <div class="snippet-text-body">
+            <p class="snippet-text-heading">Complete History</p>
+            <p class="snippet-text-content">
+              Retrieve any snippets from the first moment you started using the
+              app.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
