--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Clipboard landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
     <header class="header">
@@ -78,6 +76,29 @@
               Retrieve any snippets from the first moment you started using the
               app.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CLIPBOARD SECTION -->
+
+    <section class="clipboard">
+      <div class="container">
+        <div class="clipboard-container">
+          <div class="clipboard-title-container">
+            <p class="clipboard-title-heading">Access Clipboard Anywhere</p>
+            <p class="clipboard-title-content">
+              Whether you're on the go, or at your computer, you can access all
+              your Clipboard snippets in a few simple clicks.
+            </p>
+          </div>
+          <div class="device-img-container">
+            <img
+              src="./images/image-devices.png"
+              alt="devices"
+              class="device-img"
+            />
           </div>
         </div>
       </div>
