Supercharge your workflow

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 
     <!-- CLIPBOARD SECTION -->
 
-    <section class="clipboard">
+    <section class="section-container">
       <div class="container">
         <div class="clipboard-container">
-          <div class="clipboard-title-container">
-            <p class="clipboard-title-heading">Access Clipboard Anywhere</p>
-            <p class="clipboard-title-content">
+          <div class="title-container">
+            <p class="title-heading">Access Clipboard Anywhere</p>
+            <p class="title-content">
               Whether you're on the go, or at your computer, you can access all
               your Clipboard snippets in a few simple clicks.
             </p>
@@ -99,6 +99,58 @@
               alt="devices"
               class="device-img"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SUPERCHARGE SECTION -->
+    <section class="section-container">
+      <div class="container">
+        <div class="supercharge-conteiner">
+          <div class="title-container">
+            <p class="title-heading">Supercharge your workflow</p>
+            <p class="title-content">
+              We've got the tools to boost your productivity.
+            </p>
+          </div>
+          <div class="supercharge-body-container">
+            <div class="supercharge-body">
+              <div>
+                <img src="./images/icon-blacklist.svg" alt="blacklist" />
+              </div>
+              <div>
+                <p class="supercharge-heading">Create blacklists</p>
+                <p class="supercharge-content">
+                  Ensure sensitive information never makes its way to your
+                  clipboard by excluding certain sources.
+                </p>
+              </div>
+            </div>
+            <div class="supercharge-body">
+              <div>
+                <img src="./images/icon-text.svg" alt="text" />
+              </div>
+              <div>
+                <p class="supercharge-heading">Plain text snippets</p>
+                <p class="supercharge-content">
+                  Remove unwanted formatting from copied text for a consistent
+                  look.
+                </p>
+              </div>
+            </div>
+            <div class="supercharge-body">
+              <div>
+                <img src="./images/icon-preview.svg" alt="preview" />
+              </div>
+              <div>
+                <p class="supercharge-heading">Sneak preview</p>
+                <p class="supercharge-content">
+                  Quick preview of all snippets on your Clipboard for easy
+                  access.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
