--- a/index.html
+++ b/index.html
@@ -155,5 +155,31 @@
         </div>
       </div>
     </section>
+
+    <!-- COMPANY IMAGES -->
+
+    <section class="section-container">
+      <div class="container">
+        <div class="company-images">
+          <img
+            src="./images/logo-google.png"
+            alt="Google"
+            class="company-img"
+          />
+          <img src="./images/logo-ibm.png" alt="IBM" class="company-img" />
+          <img
+            src="./images/logo-microsoft.png"
+            alt="Microsoft"
+            class="company-img"
+          />
+          <img src="./images/logo-hp.png" alt="HP" class="company-img" />
+          <img
+            src="./images/logo-vector-graphics.png"
+            alt="Vector Graphics"
+            class="company-img"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
