--- a/index.html
+++ b/index.html
@@ -181,5 +181,25 @@
         </div>
       </div>
     </section>
+
+    <!-- CLIPBOARD FOR MAC AND IOS -->
+    <section class="section-container">
+      <div class="container">
+        <div class="apple-devices-container">
+          <div class="title-container">
+            <p class="title-heading">Clipboard for iOS and Mac OS</p>
+            <p class="title-content">
+              Available for free on the App Store. Download for Mac or iOS, sync
+              with iCloud and you're ready to start adding to your clipboard.
+            </p>
+          </div>
+
+          <div class="header-btn">
+            <button class="btn-ios">Download for iOS</button>
+            <button class="btn-mac">Download for Mac</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
