--- a/index.html
+++ b/index.html
@@ -201,5 +201,33 @@
         </div>
       </div>
     </section>
+
+    <!-- FOOTER SECTION -->
+    <footer class="footer-section">
+      <div class="container">
+        <div class="footer-container">
+          <div class="footer-container-1">
+            <img
+              src="./images/logo.svg"
+              alt="Clipboard"
+              class="clipboard-footer-img"
+            />
+            <ul>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Install Guide</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Press Kit</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-socials">
+            <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
+            <a href="#"><img src="./images/icon-instagram.svg" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
