--- a/index.html
+++ b/index.html
@@ -229,5 +229,11 @@
         </div>
       </div>
     </footer>
+    <p class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://x.com/i_amoj">Olujobi Ifeoluwa</a>.
+    </p>
   </body>
 </html>
